# PC-Temp-Monitor

./: CMakeLists.txt  README.md  main.c  send_temps.py  ssd1306_font.h  ssd1306_i2c.c  ssd1306_i2c.h  test.py
